<resources>
    <string name="app_name">LeafAvoApp</string>
    <string name="menu_home">Beranda</string>
    <string name="menu_scan">Pindai</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_history">Riwayat</string>
    <string name="price_caneat">Rp.%d</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
    <string name="minus_symbol">—</string>
    <string name="plus_symbol">＋</string>
    <string name="add_to_cart">Tambah ke Keranjang : Rp.%d</string>
    <string name="total_order">Total pesanan : Rp.%d</string>
    <string name="back">Back</string>
    <string name="share_message">Halo min, saya ingin memesan %1$d jenis oleh-oleh khas Kuningan dengan total harga Rp.%2$d.</string>
    <string name="error_message">Oleh-oleh belum ditambahkan</string>
    <string name="empty_favorite">Tidak ada list favorite.</string>
    <string name="empty_cart_message">Keranjang masih kosong.</string>
    <string name="search_caneat">Cari Buah</string>
    <string name="delete_favorite">Remove from Favorite</string>
    <string name="desc_reset">Kami akan mengirimkan link ke email anda, untuk membuat kata sandi baru, setelah anda mengisi alamat email dan mengklik tombol reset.</string>
    <string name="txt_btn_reset">Reset</string>
    <string name="txt_edt_email">Email</string>
    <string name="txt_reset_kata_sandi">Reset Kata Sandi</string>
    <string name="desc_logo_caneat">logo caneat</string>
    <string name="txt_belum_punya_akun">Belum punya akun?</string>
    <string name="txt_btn_daftar">Daftar</string>
    <string name="txt_btn_masuk">Masuk</string>
    <string name="txt_btn_lupa_kata_sandi">Lupa kata sandi?</string>
    <string name="txt_edt_kata_sandi">Kata sandi</string>
    <string name="txt_masuk_leafavo">Masuk</string>
    <string name="txt_sudah_punya_akun">Sudah punya akun?</string>
    <string name="edt_nama">Nama</string>
    <string name="txt_daftar_akun_leafavo">Daftar</string>
    <string name="txt_btn_kamera">Kamera</string>
    <string name="txt_btn_galeri">Galeri</string>
    <string name="txt_deskripsi">Deskripsi</string>
    <string name="txt_hasil">Hasil</string>
    <string name="txt_ini_adalah_tempat_gambar_tampil">Ini adalah tempat gambar tampil</string>
    <string name="btn_pindai">Pindai</string>
    <string name="listen_to_text">Dengarkan Teks</string>
</resources>